--- a/frontend/src/pages/List/List.scss
+++ b/frontend/src/pages/List/List.scss
@@ -1,4 +1,4 @@
-.mainList {
+.list {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,20 +43,20 @@
 
 @media screen and (max-width: 400px) {
 
-.mainList__cards {
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-}
+  .list__cards {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 
-  .mainList__animation img {
+  .list__animation img {
     border-radius: 48px;
     width: 300px;
   }
 }
 
 @media screen and (max-width: 350px) {
-  .mainList__animation img {
+  .list__animation img {
     width: 300px;
   }
 
