Исправление кальянов Исправление верстки

--- a/frontend/src/pages/Banquet/Banquet.scss
+++ b/frontend/src/pages/Banquet/Banquet.scss
@@ -1,5 +1,5 @@
 .banquet {
-  background: url("../../assets/images/banquet/background.png") center no-repeat;
+  background: url("../../assets/images/banquet/background.png") top no-repeat;
   background-size: cover;
   padding: 23px 15px 15px 15px;
   flex: 1;
