--- a/frontend/src/pages/Season/Season.scss
+++ b/frontend/src/pages/Season/Season.scss
@@ -1,5 +1,5 @@
 .season {
-  background: url("../../assets/images/season/background.png") center no-repeat;
+  background: url("../../assets/images/season/background.png") top no-repeat;
   background-size: cover;
   padding: 23px 15px 15px 15px;
   flex: 1;
