--- a/frontend/src/pages/Hookah/Hookah.scss
+++ b/frontend/src/pages/Hookah/Hookah.scss
@@ -1,5 +1,5 @@
 .hookah {
-  background: url("../../assets/images/hookah/hookah-still.png");
+  background: url("../../assets/images/hookah/hookah-still.png") top center;
   background-size: cover;
   position: relative;
   padding: 23px 15px 15px 15px;
