--- a/frontend/src/pages/Login/Login.scss
+++ b/frontend/src/pages/Login/Login.scss
@@ -1,10 +1,11 @@
-.registration {
+.login {
   padding: 0 13px;
-  min-height: 723px;
+  flex: 1;
   display: flex;
   align-items: center;
   justify-content: center;
   background: url("../../assets/images/Login/reg.png") center no-repeat;
+  background-size: cover;
 
   &__container {
     max-width: 387px;
