--- a/frontend/src/components/Layout/Header/Header.scss
+++ b/frontend/src/components/Layout/Header/Header.scss
@@ -22,6 +22,8 @@
     &_icons {
       display: flex;
       justify-content: end;
+      align-items: center;
+      gap: 8px;
       width: 100%;
 
       &_linkReg {
