--- a/frontend/src/pages/Basket/Basket.scss
+++ b/frontend/src/pages/Basket/Basket.scss
@@ -1,11 +1,11 @@
 .basket {
-  padding: 23px 34px 50px 34px;
-  min-height: 723px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   background: url("../../assets/images/Login/reg.png") center no-repeat;
   background-size: cover;
+  flex: 1;
+  padding: 23px 15px 15px 15px;
 
   &__title {
     color: #FFF;
@@ -81,6 +81,8 @@
 
         p {
           font-size: 25px!important;
+          min-width: 40px;
+          text-align: center;
         }
 
         &_button {
@@ -93,7 +95,7 @@
           border-radius: 50%;
           background: #0E3F16;
           color: #FFF;
-          font-family: sans-serif;
+          font-family: Prosto One;
           font-size: 40px;
           font-style: normal;
           font-weight: 400;
@@ -103,11 +105,8 @@
     }
 
     &_coment {
-      max-width: 316px;
-      width: 100%;
       height: 105px;
       margin-top: 26px;
-      margin-left: 8px;
       flex-shrink: 0;
       border-radius: 10px;
       background: rgba(13, 13, 13, 0.80);
@@ -124,7 +123,8 @@
     }
 
     &_button {
-
+      display: flex;
+      justify-content: center;
       button {
         width: 160px;
         height: 49px;
@@ -136,7 +136,7 @@
         color: #FFF;
         font-family: Prosto One;
         font-size: 20px;
-        margin: 21px 0 0 93px;
+        margin: 21px;
         border: none;
       }
     }
