--- a/frontend/src/pages/Hookah/Hookah.scss
+++ b/frontend/src/pages/Hookah/Hookah.scss
@@ -5,7 +5,7 @@
   padding: 23px 15px 15px 15px;
   flex: 1;
 
-  &:after {
+  &:before {
     content: "";
     position: absolute;
     left: 0;
@@ -15,6 +15,7 @@
     opacity: 0.7;
     background: url("../../assets/images/hookah/hookah.gif") center;
     background-size: cover;
+    z-index: 0;
   }
 
   &__container {
@@ -22,6 +23,7 @@
     flex-direction: column;
     align-items: center;
     background-size: cover;
+    z-index: 1;
 
     p {
       color: #FFF;
