--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -46,12 +46,8 @@
 
 //media
 
-@media screen and (max-width: 370px) {
-  .home {
-    div {
-      p {
-        font-size: 25px;
-      }
-    }
+@media screen and (max-width: 350px) {
+  .home__container_item a {
+    font-size: 27px;
   }
 }
