--- a/frontend/src/components/Card/Card.scss
+++ b/frontend/src/components/Card/Card.scss
@@ -1,10 +1,11 @@
 .card__container_items {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 18px;
   margin-top: 10px;
   width: 100%;
-  transition: all .1s ease-out;
+  transition: all 0.1s ease-out;
 
   .card {
     width: 183px;
@@ -14,12 +15,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 25px;
+    margin-top: 7px;
     transition: flex 1s ease-out;
 
     &__active {
       width: 100%;
       padding: 0 10px;
+      transition: 1.5s;
 
     }
 
@@ -134,18 +136,7 @@
 
 //media
 
-@media screen and (max-width: 400px) {
-  .card__active {
-    width: 95%;
-    padding: 0 10px;
-  }
 
-  .card__container_items {
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-  }
-}
 
 @media screen and (max-width: 350px) {
   .card__desc_active_title p {
