--- a/frontend/src/pages/Login/Login.scss
+++ b/frontend/src/pages/Login/Login.scss
@@ -55,6 +55,14 @@
         width: 100%;
         margin-top: 6px;
 
+        span {
+          font-family: Montserrat;
+          font-size: 12px;
+          color: red;
+          text-align: center;
+          margin-top: -10px;
+        }
+
         input {
           min-height: 39.8px;
           max-width: 300px!important;
