--- a/frontend/src/pages/Register/Register.scss
+++ b/frontend/src/pages/Register/Register.scss
@@ -50,37 +50,35 @@
         gap: 8.8px 13.6px;
         margin-top: 8px;
         justify-content: center;
-      }
 
+        div {
+          max-width: 165px;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
 
-      &_login {
-        gap: 15px;
-        max-width: 300px !important;
-        width: 100%;
-        margin-top: 6px;
+          span {
+            font-family: Montserrat;
+            font-size: 10px;
+            color: red;
+          }
 
-        input {
-          min-height: 39.8px;
-          max-width: 300px !important;
-          padding: 0 19px !important;
+          input {
+            max-width: 141px;
+            width: 100%;
+            height: 28.257px;
+            border-radius: 26.491px;
+            border: none;
+            outline: none;
+            padding: 0 11px;
+            font-family: Montserrat;
+            font-size: 8.83px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 14.128px;
+          }
         }
-      }
-
-      input {
-        max-width: 141px;
-        width: 100%;
-        height: 28.257px;
-        border-radius: 26.491px;
-        background: var(--, #FFF);
-        border: none;
-        outline: none;
-        padding: 0 11px;
-        color: var(--, #595959);
-        font-family: Montserrat;
-        font-size: 8.83px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 14.128px;
       }
     }
 
