--- a/frontend/src/pages/Bar/Bar.scss
+++ b/frontend/src/pages/Bar/Bar.scss
@@ -1,5 +1,5 @@
 .bar {
-  background: url("./img/bar.gif") top;
+  background: url("./img/barAnimation.gif") top;
   background-size: cover;
   padding: 23px 15px 15px 15px;
   flex: 1;
