--- a/frontend/src/components/Layout/Header/Header.scss
+++ b/frontend/src/components/Layout/Header/Header.scss
@@ -1,10 +1,12 @@
 .header {
-  max-width: 414px;
   width: 100%;
   min-height: 88px;
   background: url(../../../assets/images/header/background.png) center no-repeat;
+  background-size: cover;
   position: fixed;
   z-index: 99;
+
+
 
   &__container {
     display: flex;
