--- a/frontend/src/pages/Preorder/Preorder.scss
+++ b/frontend/src/pages/Preorder/Preorder.scss
@@ -40,7 +40,7 @@
         border-bottom: 1px white solid;
 
         &::placeholder {
-          color: #bcbcbc;
+          color: #f1f1f1;
         }
       }
     }
